@@ -1014,12 +1014,12 @@ static int check_char_mapping (SLwchar_Map_Type *map, Char_Map_Type *list, int f
 		  if ((*is_func)(chmin))
 		    chmap[chmin] = (invert ? chmin : (*to_func)(chmin));
 	       }
+	     list->map_function = map_class_to_class_method;
 	     break;
 
 	   default:
 	     return -1;
 	  }
-	list->map_function = map_class_to_class_method;
 	break;
      }
    return 0;
@@ -1160,8 +1160,12 @@ static int apply_lexical_map (SLwchar_Map_Type *map, SLwchar_Type wc_in, SLwchar
 	if (list->map_function != NULL)
 	  {
 	     int status = (*list->map_function)(&list->from, &list->to, invert, wc_in, wc_out);
-	     if (invert ^ status)
-	       return status;
+	     if (status == 0)
+	       {
+		  if (invert)
+		    return status;
+	       }
+	     else return status;
 	  }
 	list = list->next;
      }
